@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 the original author or authors.
+ * Copyright 2016-2022 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -28,9 +28,10 @@ import org.junit.jupiter.params.provider.ArgumentsSource;
  * the annotation has to be on the method itself as any other {@link ArgumentsSource}.
  * </p>
  *
- * <p>
- * For more details and examples, see
- * <a href="https://junit-pioneer.org/docs/json/" target="_top">the documentation on <code>JSON tests</code></a>
+ * <p>Note that this extension requires a JSON parser to be available at run time,
+ * which may include adding it to the module graph with {@code --add-modules}.
+ * For details on that as well as how to use this extension, see
+ * <a href="https://junit-pioneer.org/docs/json-argument-source" target="_top">the documentation on <code>JSON tests</code></a>
  * </p>
  *
  * @since 1.7.0
